--- a/index.qmd
+++ b/index.qmd
@@ -74,7 +74,7 @@ listing:
 
 # Some of Alan's Projects
 
-On this portfolio, I share and teach what I learn. To get started, you can check out my most popular content below. You can find me on GitHub, Instagram, and LinkedIn. Feel free to reach out to me via mail and subscribe to my email newsletter.
+On this portfolio, I share and teach what I learn. To get started, you can check out my most popular content below. You can find me on GitHub and LinkedIn. Feel free to reach out to me via mail or follow my Instagram.
 
 
 <br><br>
