--- a/index.qmd
+++ b/index.qmd
@@ -64,7 +64,7 @@ listing:
       I'm a data scientist committed to driving impactful results through data, whether in the academic, political, or historical domain. I have a passion for Python, R, data visualization, and statistics/machine learning. 
     </p>
     
-    <a href="resume.html" target="_blank" style="background-color: #007BFF; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);">View My Resume</a>
+    <a href="resume.html" style="background-color: #007BFF; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);">View My Resume</a>
 
     
 </div>
