--- a/resume.qmd
+++ b/resume.qmd
@@ -1,12 +1,116 @@
 
-
-::: {.column-screen}
-
 ```{=html}
-<iframe
-  src="https://ajaverett.github.io/resume.pdf"
-  height="1200"
-  style="width:100%;border:none;"
-></iframe>
+
+<div style="text-align: center; margin-top: 20px;">
+    <a href="resume.pdf" target="_blank" style="background-color: #007BFF; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);">View as a PDF</a>
+</div>
+
+
+<div style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: #fff; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3); border-radius: 4px;">
+
+
+<div style="font-family: Arial, sans-serif; margin: 10px; color: #333;">
+
+<!-- Header -->
+<div style="text-align: center; display: flex; align-items: center; justify-content: center;">
+<h1 style="font-size: 2em; margin-bottom: 10px;">Alan J Averett</h1>
+</div>
+<br>
+<div style="text-align: center; display: flex; align-items: center; justify-content: center;">
+<p style="font-size: 1em; margin-top: 0;">
+    <span style="margin-right: 20px;">832.856.4666</span>
+    <span style="margin-right: 20px;">|</span>
+    <span style="margin-right: 20px;"><a href="mailto:ajaverett0@gmail.com" style="text-decoration: none; color: #0073e6;">ajaverett0@gmail.com</a></span>
+    <span style="margin-right: 20px;">|</span>
+    <span style="margin-right: 20px;"><a href="https://linkedin.com/in/ajaverett" target="_blank" style="text-decoration: none; color: #0073e6;">linkedin.com/in/ajaverett</a></span>
+    <span style="margin-right: 20px;">|</span>
+</p>
+</div>
+
+<!-- Education -->
+<h2 style="font-size: 1.5em; margin-bottom: 10px;">EDUCATION</h2>
+<p><strong>Brigham Young University- Idaho</strong>, Rexburg, ID</p>
+<p>B.Sc. Data Science, Statistics; Major GPA: 3.8/4.0 <span style="margin-left: 20px;">Apr 2020 - Dec 2023</span></p>
+<ul style="list-style-type: disc; margin-left: 20px;">
+    <li>Certifications: Web and Computer Programming (3.7/4.0); Machine Learning (4.0/4.0)</li>
+    <li>Leadership: Society of Hispanic Professional Engineers (SHPE), Data Science and AI Society</li>
+</ul>
+
+<!-- Experience -->
+<h2 style="font-size: 1.5em; margin-top: 20px; margin-bottom: 10px;">EXPERIENCE</h2>
+    <!-- WPA Intelligence -->
+    <div style="margin-bottom: 20px;">
+        <p><strong>WPA Intelligence</strong>, Washington D.C.</p>
+        <p>Machine Learning Intern <span style="margin-left: 20px;">Jul 2022 - Nov 2022</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Created digestible reports for 80+ political campaigns by analyzing/visualizing voter data trends with machine learning models that predicted ideological disposition and turnout using R’s tidyverse</li>
+            <li>Significantly decreased polling production time by automating sampling methodologies using R’s statistical libraries</li>
+            <li>Increased accuracy and AUC for all future machine learning models by using GIS data to categorize over 100 million records of voter data into 12 granularities of population density using R’s sf and other geospatial libraries</li>
+        </ul>
+    </div>
+
+    <!-- Mathematics Department BYU-Idaho -->
+    <div style="margin-bottom: 20px;">
+        <p><strong>Mathematics Department BYU-Idaho</strong>, Rexburg, ID</p>
+        
+        <!-- Data Science Society President -->
+        <p>Data Science Society President <span style="margin-left: 20px;">Mar 2023 - Sep 2023</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Oversaw and helped coordinate all projects undertaken by the society with the faculty sponsor</li>
+            <li>Led and coordinated data science society activities and meetings; mentored and supported project teams including weekly bootcamps to teach data analysis, statistics, and machine learning</li>
+        </ul>
+
+        <!-- Teacher’s Assistant -->
+        <p>Teacher’s Assistant <span style="margin-left: 20px;">May 2022 - Present</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li><strong>DS Programming</strong>: Tutored data analysis, statistics, and basic ML in Python (Pandas, NumPy, Sci-kit Learn)</li>
+            <li><strong>Data Wrangling and viz</strong>: Tutored complex data analysis and visualization with R tidyverse (dplyr, ggplot2 etc.)</li>
+            <li><strong>Big Data Programming</strong>: Tutored big data analysis and visualization in DataBricks (Polars, PySpark, Plotly, AutoML, etc.)</li>
+            <li><strong>Business Statistics</strong>: Tutored basic statistical analyses, theories, and methods with Excel</li>
+            <li><strong>Linear Algebra</strong>: Tutored both non-computational and computational linear algebra with Python (NumPy, SymPy)</li>
+        </ul>
+
+        <!-- Head Lab Coordinator -->
+        <p>Head Lab Coordinator <span style="margin-left: 20px;">Apr 2023 - Present</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Managed, scheduled, and trained tutors to work in the university data science lab for R and Python</li>
+            <li>Tutored students seeking help in programming and mathematics for all intermediate level data science courses</li>
+            <li>Created a web applet for tutorials in pandas, polars, tidyverse, and SQL; used by 100+ students</li>
+        </ul>
+    </div>
+
+<!-- Projects -->
+<h2 style="font-size: 1.5em; margin-top: 20px; margin-bottom: 10px;">PROJECTS</h2>
+    <!-- Wilford Woodruff Papers -->
+    <div style="margin-bottom: 20px;">
+        <p><strong>Wilford Woodruff Papers</strong>, Rexburg, ID</p>
+        <p>Data Scientist <span style="margin-left: 20px;">May 2023 - Present</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Provided actionable graphs and trends using NLP tools including sentiment analysis and unsupervised textual clustering alongside time-series analysis as part of the Wilford Woodruff production team</li>
+            <li>Delivered an interactive web application that cross-referenced religious texts with 19th century published journal entries by using a Bag-of-Words model to vectorize n-grams to find textual matches sorted by confidence</li>
+        </ul>
+    </div>
+
+    <!-- FamilySearch -->
+    <div style="margin-bottom: 20px;">
+        <p><strong>FamilySearch</strong>, Rexburg, ID</p>
+        <p>Statistician <span style="margin-left: 20px;">Sep 2023 - Present</span></p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Identified erroneous genealogical submissions in the African Oral History Project using in-house tuned statistical models, anomaly detection methods, and machine learning algorithms to eliminate fraudulent contractors</li>
+        </ul>
+    </div>
+
+<!-- Skills -->
+<h2 style="font-size: 1.5em; margin-top: 20px; margin-bottom: 10px;">SKILLS</h2>
+    <ul style="list-style-type: disc; margin-left: 20px;">
+        <li><strong>Python</strong>: Pandas, NumPy, Sci-kit Learn, PySpark, Polars, Keras / Tensorflow, BeautifulSoup4, DataBricks</li>
+        <li><strong>R</strong>: CAR, Mosaic, RMarkdown, Tidyverse (dplyr, tidyr, stringr, forcats, lubridate, purrr, etc.)</li>
+        <li><strong>Visualization libraries</strong>: Streamlit, ggplot2, Matplotlib / Seaborn, Plotly Express, Altair</li>
+        <li><strong>Other Technical Skills</strong>: Microsoft Excel, SQL, Git/GitHub, Quarto, LaTeX, Regex, Docker</li>
+        <li><strong>Math Courses</strong>: Calculus, Applied Calculus for Data Analysis, Linear Algebra, Intermediate Statistics, Applied Regression</li>
+    </ul>
+
+</div>
+
+</div>
 ```
-:::
