yep, finally done

--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,18 @@
 ---
-page-layout: full
+format: 
+   html:
+     include-in-header: 
+        text: |
+            <style>
+                body {
+                background-color: black;
+                }
+            </style>
 ---
 
 
 ```{=html}
+<div>
 
 <h1 style="text-align: center; color: white; font-size: 3em; margin-top: 2em; margin-bottom: 2em;">Alan's Journey</h1>
 
@@ -241,6 +250,8 @@ page-layout: full
     </div>
 
 </section>
+
+</div>
 
 <br><br><br>
 
